--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -61,3 +61,57 @@ border-top: 2px solid #008346;
 border-bottom: 1px solid transparent;
 background-color: transparent;
 }
+
+/* Selectize input */
+/* .selectize-input {
+  font-weight: bold;
+  border: 0px solid transparent;
+  padding: 6px 12px;
+  display: inline-block;
+  width: 77.5%;
+  overflow: hidden;
+  position: relative;
+  z-index: 1; */
+  /* -webkit-box-sizing: border-box; */
+  /* -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+} */
+
+/* .selectize-control.single .selectize-input:after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 17px;
+  margin-top: -3px;
+  width: 0;
+  height: 0;
+  border-top: 1px solid #016939;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-style: solid;
+  border-width: 5px 5px 0 5px; */
+  /* border-color: #333333 transparent transparent transparent; */
+/* } */
+
+/* .selectize-input.focus{
+  border: 0px solid transparent;
+  border-color: transparent;
+  box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%),
+  0 0 8px transparent;
+
+} */
+
+/* Leaflet */
+.leaflet-top, .leaflet-bottom {
+  z-index: unset !important;
+}
+
+.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+  z-index: 0 !important;
+}
