--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -330,7 +330,7 @@ background-color: transparent;
   width: 98% !important;
 }
 
-#AYD_SSC_map {
+#SYD_SSC_map {
   border: 1px solid #ddd;
   width: 98% !important;
 }
